# dapp

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/app/: package.json  tsconfig.node.json  vite.config.ts
src/app/src/: App.tsx  main.tsx
src/app/src/api/dataSource/: ContractApiDataSource.ts  LogicApiDataSource.ts
src/app/src/components/: icauth.tsx  icons.tsx  navbar.tsx  primitives.ts
src/app/src/components/constants/: en.global.json
src/app/src/components/footer/: Footer.css  Footer.tsx
src/app/src/components/login/: ContentWrapper.css  ContentWrapper.tsx
src/app/src/components/proposal/: Actions.css  Actions.tsx
src/app/src/components/proposals/: ActionsDropdown.tsx  ChangeApprovalsNeededForm.tsx  CreateProposalPopup.tsx  CrossContractCallForm.tsx  MaxActiveProposalsForm.tsx  SetContextVariableForm.tsx  TransferForm.tsx
src/app/src/components/proposals/proposalsCSS/: ActionsDropdown.css  ChangeApprovalsNeededForm.css  CreateProposalPopup.css  CrossContractCallForm.css  SetContextVariableForm.css
src/app/src/config/: site.ts
src/app/src/layouts/: default.tsx
src/app/src/pages/: buytickets.tsx  createlottery.tsx  demo.tsx  enter.tsx  index.tsx  login.tsx  setup.tsx
src/app/src/styles/: Authenticate.css  HomePage.css  globals.css
src/dapp3_backend/: Cargo.toml  dapp3_backend.did
src/dapp3_backend/src/: lib.rs
src/dapp3_frontend/: package.json
src/dapp3_frontend/src/: App.jsx
