[package]
name = "dapp3_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10"  # Remove if unnecessary
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0.217", features = ["derive"] }
# wasm-bindgen = "0.2.86"
getrandom = { version = "*", features = ["custom"] }
sha2 = "0.10.8"

